added additional hours to calendar

--- a/index.html
+++ b/index.html
@@ -108,6 +108,56 @@
           <button class="btn btn-outline-secondary isdone" id="done-17" value="" aria-label="check if your 5PM activity is done" type="button">Done</button>
         </div>
     </div>
+    <div class="input-group mb-3" id="18">
+        <div class="input-group-prepend">
+            <div class="input-group-text">6 PM</div>
+        </div>
+        <textarea class="form-control" id="input-18" placeholder="Your to-do at 6 PM" aria-label="Your to-do at 6 PM" aria-describedby="Your to-do at 6 PM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" id="done-18" value="" aria-label="check if your 6PM activity is done" type="button">Done</button>
+        </div>
+    </div>
+    <div class="input-group mb-3" id="9">
+        <div class="input-group-prepend">
+            <div class="input-group-text">7 PM</div>
+        </div>
+        <textarea class="form-control" id="input-19" placeholder="Your to-do at 7 PM" aria-label="Your to-do at 7 PM" aria-describedby="Your to-do at 7 PM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" id="done-19" value="" aria-label="check if your 7PM activity is done" type="button">Done</button>
+        </div>
+    </div>
+    <div class="input-group mb-3" id="20">
+        <div class="input-group-prepend">
+            <div class="input-group-text">8 PM</div>
+        </div>
+        <textarea class="form-control" id="input-20" placeholder="Your to-do at 8 PM" aria-label="Your to-do at 8 PM" aria-describedby="Your to-do at 8 PM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" id="done-20" value="" aria-label="check if your 8PM activity is done" type="button">Done</button>
+        </div>
+    </div>
+    <div class="input-group mb-3" id="21">
+        <div class="input-group-prepend">
+            <div class="input-group-text">9 PM</div>
+        </div>
+        <textarea class="form-control" id="input-21" placeholder="Your to-do at 9 PM" aria-label="Your to-do at 9 PM" aria-describedby="Your to-do at 9 PM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" id="done-21" value="" aria-label="check if your 9PM activity is done" type="button">Done</button>
+        </div>
+    </div>
+    <div class="input-group mb-3" id="22">
+        <div class="input-group-prepend">
+            <div class="input-group-text">10 PM</div>
+        </div>
+        <textarea class="form-control" id="input-22" placeholder="Your to-do at 10 PM" aria-label="Your to-do at 10 PM" aria-describedby="Your to-do at 10 PM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" id="done-22" value="" aria-label="check if your 10PM activity is done" type="button">Done</button>
+        </div>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
