modified buttons to increase conformity on rounding

--- a/index.html
+++ b/index.html
@@ -18,9 +18,29 @@
         <h1 class="display-4"><span id="todaysDate"></span></h1>
         <h2>to-do list</h2>
     </div>
+    <div class="input-group mb-3" id="7">
+        <div class="input-group-prepend">
+        <div class="input-group-text"><i class="fas fa-hourglass-start"> </i>7 AM</div>
+        </div>
+        <textarea class="form-control" id="input-7" placeholder="Your to-do at 7 AM" aria-label="Your to-do at 7 AM" aria-describedby="Your to-do at 7 AM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" value="" id="done-7" aria-label="check if your 7AM activity is done" type="button">Done</button>
+        </div>
+    </div>
+    <div class="input-group mb-3" id="8">
+        <div class="input-group-prepend">
+        <div class="input-group-text">8 AM</div>
+        </div>
+        <textarea class="form-control" id="input-8" placeholder="Your to-do at 8 AM" aria-label="Your to-do at 8 AM" aria-describedby="Your to-do at 8 AM"></textarea>
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary btnSave" type="button">Save</button>
+          <button class="btn btn-outline-secondary isdone" value="" id="done-8" aria-label="check if your 8AM activity is done" type="button">Done</button>
+        </div>
+    </div>
     <div class="input-group mb-3" id="9">
         <div class="input-group-prepend">
-        <div class="input-group-text"><i class="fas fa-hourglass-start"> </i>9 AM</div>
+        <div class="input-group-text">9 AM</div>
         </div>
         <textarea class="form-control" id="input-9" placeholder="Your to-do at 9 AM" aria-label="Your to-do at 9 AM" aria-describedby="Your to-do at 9 AM"></textarea>
         <div class="input-group-append">
@@ -80,7 +100,7 @@
     </div>
     <div class="input-group mb-3" id="15">
         <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fas fa-hourglass-end"></i> 3 PM</div>
+            <div class="input-group-text">3 PM</div>
         </div>
         <textarea class="form-control" id="input-15" placeholder="Your to-do at 3 PM" aria-label="Your to-do at 3 PM" aria-describedby="Your to-do at 3 PM"></textarea>
         <div class="input-group-append">
@@ -150,7 +170,7 @@
     </div>
     <div class="input-group mb-3" id="22">
         <div class="input-group-prepend">
-            <div class="input-group-text">10 PM</div>
+            <div class="input-group-text"><i class="fas fa-hourglass-end"></i> 10 PM</div>
         </div>
         <textarea class="form-control" id="input-22" placeholder="Your to-do at 10 PM" aria-label="Your to-do at 10 PM" aria-describedby="Your to-do at 10 PM"></textarea>
         <div class="input-group-append">
